Resolve uncommitted changes before saving flow contents

--- a/Delphi/bucket.yml
+++ b/Delphi/bucket.yml
@@ -1,6 +1,15 @@
 flows:
   9eb3e61d-cd41-451c-9459-920b8469eb13: {ver: 1, file: Flow.snapshot, comments: da,
     author: anonymous, created: 1724142929352, flowName: Flow, flowDesc: ''}
+  651b0fca-163a-4fd1-a326-f546c63f9c51:
+    ver: 2
+    file: LTM.snapshot
+    comments: |
+      ltm
+    author: anonymous
+    created: 1724142959129
+    flowName: LTM
+    flowDesc: ''
   6c019af4-1eeb-48e3-adba-1d5113148914:
     ver: 3
     file: Energy_Monitoring_v2.snapshot
